--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,7 @@
 # gitmux: https://github.com/arl/gitmux
 
 
+
 # Create new panes and windows with current path
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -14,156 +15,98 @@ bind-key -n M-/ split-window -v -c "#{pane_current_path}"
 bind-key -n M-n new-window -c "#{pane_current_path}"
 bind-key -n M-N new-session -c "#{pane_current_path}"
 
-
 # Sidepanel toggle (VSCode-style)
-# Store the sidepanel pane ID in a user option
-set -g @sidepanel-pane-id ""
-
-# Sidepanel toggle (VSCode-style) - persistent popup
-# Store the sidepanel session name in a user option
-set -g @sidepanel-session ""
+set -g @sidepanel-pane-id ""  # Store the sidepanel pane ID in a user option
+set -g @sidepanel-session ""  # Store the sidepanel session name in a user option
 
 # Toggle sidepanel with L (prefix+L)
-# bind-key L display-popup "tmux new-session -A -s sidepanel"
-
 bind-key L if-shell -F '#{==:#{session_name},sidepanel}' {
-    # If we're already in the sidepanel session, detach
-    detach-client
+    detach-client  # If we're already in the sidepanel session, detach
 } {
-    # If sidepanel session exists, attach to it; otherwise create new one
     if-shell -F '#{session_exists:sidepanel}' {
-        attach-session -t sidepanel
+        attach-session -t sidepanel  # If sidepanel session exists, attach to it
     } {
-        display-popup -E -h 95% -w 95% -x C -y C "tmux new-session -A -s sidepanel"
+        display-popup -E -h 95% -w 95% -x C -y C "tmux new-session -A -s sidepanel"  # Otherwise create new one
     }
 }
 
+# Layout and process management
+bind-key / next-layout  # Toggle layout
+bind-key H display-popup -E -h 95% -w 95% -x C -y C 'htop -t'  # Quick view of processes
+bind-key g display-popup -E -h 95% -w 60% -x C -y C 'watch -n 1 nvidia-smi'  # GPU monitoring
 
-# bind-key -n M-l if-shell -F '#{?@sidepanel-pane-id,#{@sidepanel-pane-id},}' \
-#     'kill-pane -t "#{@sidepanel-pane-id}" ; set -u @sidepanel-pane-id' \
-#     'split-window -h -c "#{pane_current_path}" -P -F "#{pane_id}" ; set -g @sidepanel-pane-id "#{pane_id}" ; resize-pane -x 30%'
+# Help and session management
+bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'  # Help screen
+bind-key S command-prompt -p "New session name:" "new-session -s '%%'"  # New session prompt
 
+# Terminal and history settings
+set -g default-terminal "tmux-256color"  # Set default terminal
+set -g history-limit 100000  # Increase history limit
+set -g base-index 1  # Start numbering windows from 1
+set-option -g renumber-windows on  # Renumber windows
+set -s escape-time 50  # Faster escape sequences
 
-# toggle
-bind-key / next-layout
-# Quick view of processes
-bind-key H display-popup -E -h 95% -w 95% -x C -y C 'htop -t'
-# bind-key h display-popup -E -h 95% -w 95% -x 5% 'htop -t -u "$(whoami)" -p "$(pgrep -vfd, $HTOP_FILTER)"'
-
-bind-key g display-popup -E -h 95% -w 60% -x C -y C 'watch -n 1 nvidia-smi'
-# bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
-
-# Help screen: rebind list-keys window into a new pane
-bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
-
-bind-key S command-prompt -p "New session name:" "new-session -s '%%'"
-
-# bind-key s display-popup -E -h 95% -w 60% -x C -y C "/home/vaden/.tmux/plugins/tmux-fzf-pane-switch/select_pane.sh true center,70%,80% right,,,nowrap 'pane_id session_name window_name pane_title pane_current_command'"
-
-# syntax highlighting in Vim
-# set -g terminal-overrides ",xterm-256color:Tc"
-# set -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"
-# increase history limit
-set -g history-limit 100000
-# start numbering windows from 1 instead of zero
-set -g base-index 1
-set-option -g renumber-windows on
-# Faster escape sequences (default is 500ms).
-# This helps when exiting insert mode in Vim: http://superuser.com/a/252717/65504
-set -s escape-time 50
-
-
+# Popup management
 bind -n M-A display-popup -E -h 95% -w 95% -x 5% show-tmux-popup.sh popup1
 bind -T popup M-A detach
-
 bind -n M-S display-popup -E -h 95% -w 95% -x 5% show-tmux-popup.sh popup2
 bind -T popup M-S detach
-# bind -n M-A run-shell "sh ~/.tmux/show-tmux-popup.sh popup1"
-# bind -n M-B run-shell "sh ~/.tmux/show-tmux-popup.sh popup2"
+bind -T popup C-o copy-mode  # Support detaching from nested session
 
-# support detaching from nested session with the same shortcut
-bind -T popup C-o copy-mode
+# Mouse and clipboard settings
+set -g mouse on  # Enable mouse mode
+set -g allow-passthrough  # Allow passthrough
 
-# Enable mouse mode for the popup window
-bind -T popup MouseDown1Pane select-pane
-bind -T popup WheelUpPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -t = -X scroll-up" "copy-mode -u"
-bind -T popup WheelDownPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -t = -X scroll-down" "copy-mode"
-
-
-# enable for iTerm (Terminal.app doesn't have mouse support)
-# set -g mouse off
-set -g mouse on
-
-# set -s set-clipboard on
-set -g allow-passthrough
-
-
-# bind-key -T vi-copy WheelUpPane scroll-up
-# bind-key -T vi-copy WheelDownPane scroll-down
+# Copy mode settings
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'copy'
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'copy'
 
+# Status and title settings
 set-option -g status-position top
-
-# enable clipboard  http://goo.gl/DN82E
-# enable RubyMotion http://goo.gl/WDlCy
-# set -g default-command "reattach-to-user-namespace bash -l"
-
 set-option -g status-keys vi
 set-option -g set-titles on
 set-option -g set-titles-string 'tmux - #W'
 set -g bell-action any
 set-option -g visual-bell off
-# set-option -g set-clipboard off
 setw -g mode-keys vi
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-interval 2
 
+# Environment settings
 setenv -g SHOW_DIRECTORY_NAME 1
+set-environment -gu GEM_EDITOR  # Disable possibly set visual editor
 
-# disable possibly set visual editor
-set-environment -gu GEM_EDITOR
-
-# load any local config
+# Load local config
 if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
+
+# Plugin settings
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'kristijan/tmux-fzf-pane-switch'
-# set -g @plugin 'shivamashtikar/tmux-onedark-theme'
 
-
-bind-key | split-window -h -c '#{pane_current_path}' # normally prefix-%
-bind-key '\' split-window -h -c '#{pane_current_path}' # normally prefix-%
-bind-key - split-window -v -c '#{pane_current_path}' # normally prefix-"
-
-# Open split panes with the path of the current pane.
+# Key bindings for pane and window management
 unbind-key %
 bind-key % split-window -h -c '#{pane_current_path}'
 unbind-key '"'
 bind-key '"' split-window -v -c '#{pane_current_path}'
-
-# Same for new windows.
 unbind-key c
 bind-key c new-window -c '#{pane_current_path}'
 
-# Vim-like key bindings for pane navigation (default uses cursor keys).
+# Vim-like key bindings for pane navigation
 unbind-key h
 bind-key h select-pane -L
 unbind-key j
 bind-key j select-pane -D
 unbind-key k
 bind-key k select-pane -U
-unbind-key l # normally used for last-window
+unbind-key l
 bind-key l select-pane -R
 
-# Resizing (mouse also works).
-# Here, and in other binds, `-r` allows us to repeat without having to hit the
-# prefix (with repeat-time, which defaults to 500ms).
+# Resizing panes
 unbind-key Left
 bind-key -r Left resize-pane -L 5
 unbind-key Right
@@ -173,20 +116,11 @@ bind-key -r Down resize-pane -D 5
 unbind-key Up
 bind-key -r Up resize-pane -U 5
 
-# Fast toggle between current and last-used window (normally prefix-l).
-bind-key ^space last-window
-
-# `^space ^space` is awfully close to the destructive `^space space`, which
-# trashes the layout. Provide a quick way to get back to the previous-used
-# layout.
-#
-# prefix-p is normally used for previous-window, but I never use that,
-# prefering numeric access or the fast toggle above (prefix-^space).
-bind-key p select-layout -o
-
-bind-key -r '<' swap-window -d -t '{previous}' # Move window left.
-bind-key -r '>' swap-window -d -t '{next}' # Move window right.
-
+# Window management
+bind-key ^space last-window  # Fast toggle between current and last-used window
+bind-key p select-layout -o  # Quick way to get back to the previous-used layout
+bind-key -r '<' swap-window -d -t '{previous}'  # Move window left
+bind-key -r '>' swap-window -d -t '{next}'  # Move window right
 
 #Variables
 
@@ -219,25 +153,7 @@ wg_is_keys_off="#{?#{==:#(tmux show-option -qv key-table),off},#[reverse]OFF,}"
 
 set -g status-right "$wg_is_keys_off #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host"
 
-# Load Dracula theme configuration
-
-# Dracula color palette
-set -g @dracula-colors "
-foreground='#ffffff'
-background='#002451'
-highlight='#003f8e'
-status_line='#00346e'
-comment='#7285b7'
-red='#ff9da4'
-orange='#ffc58f'
-yellow='#ffeead'
-green='#d1f1a9'
-aqua='#99ffff'
-blue='#bbdaff'
-purple='#ebbbff'
-pane='#4d5057'
-"
-# set -g @dracula-cpu-arch-label "󰍛 "
+# Remote and Local Configuration
 # Detect if we're running remotely via SSH
 if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     # Remote configuration (Ubuntu with GPU)
@@ -251,90 +167,117 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
         set -g @dracula-plugins "cpu-usage ram-usage ssh-session network-bandwidth network"
     }
 
-    set -g @dracula-show-powerline true
     set -g @dracula-show-left-icon "󰄛"
-    set -g @dracula-synchronize-label "󰓦"
-    set -g @dracula-synchronize-indicator "sync"
 } {
     # Local configuration (MacBook)
     set -g @plugin 'dracula/tmux'
     set -g @dracula-plugins "cpu-usage ram-usage time network battery"
-    set -g @dracula-show-powerline true
-
-    # Local icon (laptop) + session name
     set -g @dracula-show-left-icon "\uf179"
-
 }
 
-# Common visual settings
-
-set -g @dracula-gpu-ram-usage-colors "yellow dark_gray"
-set -g @dracula-gpu-usage-colors "yellow dark_gray"
-
-set -g @dracula-network-colors "status_line white"
-set -g @dracula-network-ethernet-label "󰈀 Eth"
-set -g @dracula-network-offline-label "󱍢 "
-set -g @dracula-network-wifi-label " "
-set -g @dracula-ssh-session-colors "status_line white"
-
-set -g @dracula-network-bandwidth-interval 1
-set -g @dracula-network-bandwidth-colors "status_line white"
-set -g @dracula-network-bandwidth-show-interface true
-set -g @dracula-network-bandwidth-label "🌐"
-
-# Synchronize indicator settings
-set -g @dracula-synchronize-label "󰓦"
+# Common Dracula Settings
+set -g @dracula-show-powerline true
 set -g @dracula-synchronize-indicator "sync"
-set -g @dracula-synchronize-colors "green dark_gray"
-
-
-
-# Battery settings
-set -g @dracula-battery-label "🔋"
-set -g @dracula-battery-colors "green dark_gray"
+set -g @dracula-network-bandwidth-interval 1
+set -g @dracula-network-bandwidth-show-interface true
 set -g @dracula-battery-style "percentage"
 set -g @dracula-show-battery-percentage true
-
-# Time settings
-set -g @dracula-time-colors "orange dark_gray"
-
-# CPU and RAM display settings
-set -g @dracula-cpu-usage-label "🎛 "
 set -g @dracula-cpu-display-load true
 set -g @dracula-show-cpu-usage true
 set -g @dracula-show-ram-usage true
 set -g @dracula-ram-usage true
+
+# Color Settings
+
+
+
+# set -g @dracula-colors "
+# # Dracula Color Pallette
+# white='#f8f8f2'
+# gray='#44475a'
+# dark_gray='#282a36'
+# light_purple='#bd93f9'
+# dark_purple='#6272a4'
+# cyan='#8be9fd'
+# green='#50fa7b'
+# orange='#ffb86c'
+# red='#ff5555'
+# pink='#ff79c6'
+# yellow='#f1fa8c'
+# "
+
+# set -g @dracula-gpu-ram-usage-colors "yellow dark_gray"
+# set -g @dracula-gpu-usage-colors "yellow dark_gray"
+# set -g @dracula-network-colors "status_line white"
+# set -g @dracula-ssh-session-colors "status_line white"
+# set -g @dracula-network-bandwidth-colors "status_line white"
+# set -g @dracula-synchronize-colors "green dark_gray"
+# set -g @dracula-battery-colors "green dark_gray"
+# set -g @dracula-time-colors "orange dark_gray"
+# set -g @dracula-cpu-usage-colors "dark_gray white"
+# set -g @dracula-ram-usage-colors "dark_gray white"
+
+set -g @dracula-colors "
+# Modern Elegant Palette
+soft_blue='#4F8CC9'
+muted_teal='#3AAFA9'
+deep_purple='#6C3483'
+slate='#2D3A4A'
+charcoal='#23272E'
+light_blue='#B3C7F7'
+light_gray='#E5E9F0'
+dark_blue='#223A5E'
+olive='#7D8F69'
+soft_orange='#FFB26B'
+forest_green='#2E8B57'
+warm_gold='#FFD580'
+dark_gray='#22223B'
+white='#FFFFFF'
+"
+
+set -g @dracula-cpu-usage-colors "soft_blue white"
+set -g @dracula-ram-usage-colors "muted_teal white"
+set -g @dracula-gpu-usage-colors "deep_purple white"
+set -g @dracula-gpu-ram-usage-colors "slate white"
+set -g @dracula-network-colors "charcoal light_blue"
+set -g @dracula-network-bandwidth-colors "light_gray dark_blue"
+set -g @dracula-ssh-session-colors "olive white"
+set -g @dracula-synchronize-colors "soft_orange white"
+set -g @dracula-battery-colors "forest_green white"
+set -g @dracula-time-colors "warm_gold dark_gray"
+
+# Icon and Label Settings
+set -g @dracula-synchronize-label "󰓦"
+set -g @dracula-network-ethernet-label "󰈀 Eth"
+set -g @dracula-network-offline-label "󱍢 "
+set -g @dracula-network-wifi-label " "
+set -g @dracula-network-bandwidth-label "🌐"
+set -g @dracula-battery-label "🔋"
+set -g @dracula-cpu-usage-label "🎛 "
 set -g @dracula-ram-usage-label "𖣘 "
-set -g @dracula-cpu-usage-colors "dark_gray white"
-set -g @dracula-ram-usage-colors "dark_gray white"
-
-# # RAM usage settings
-# set -g @dracula-ram-usage-colors "cyan dark_gray"
-
-
-
-
 set -g @dracula-gpu-power-label "󰢮"
 set -g @dracula-gpu-usage-label "🚀"
 set -g @dracula-gpu-vram-label "🎮"
 
+# Miscellaneous Settings
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
 set -g @dracula-show-flags false
 set -g @dracula-refresh-rate 2
 set -g @dracula-border-contrast true
 
-
-# run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+# Thumbs Plugin Settings
 set -g @thumbs-command 'echo -n {} | copy'
 set -g @thumbs-reverse enabled
 set -g @thumbs-unique enabled
 
+# Plugin and Continuum Settings
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g default-command "exec $(which zsh) -l"
 
+# Status and Rename Settings
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
