tweaks to tmux colours

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -179,7 +179,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 set -g @dracula-show-powerline true
 set -g @dracula-synchronize-indicator "sync"
 set -g @dracula-network-bandwidth-interval 1
-set -g @dracula-network-bandwidth-show-interface true
+set -g @dracula-network-bandwidth-show-interface false
 set -g @dracula-battery-style "percentage"
 set -g @dracula-show-battery-percentage true
 set -g @dracula-cpu-display-load true
@@ -189,33 +189,6 @@ set -g @dracula-ram-usage true
 
 # Color Settings
 
-
-
-# set -g @dracula-colors "
-# # Dracula Color Pallette
-# white='#f8f8f2'
-# gray='#44475a'
-# dark_gray='#282a36'
-# light_purple='#bd93f9'
-# dark_purple='#6272a4'
-# cyan='#8be9fd'
-# green='#50fa7b'
-# orange='#ffb86c'
-# red='#ff5555'
-# pink='#ff79c6'
-# yellow='#f1fa8c'
-# "
-
-# set -g @dracula-gpu-ram-usage-colors "yellow dark_gray"
-# set -g @dracula-gpu-usage-colors "yellow dark_gray"
-# set -g @dracula-network-colors "status_line white"
-# set -g @dracula-ssh-session-colors "status_line white"
-# set -g @dracula-network-bandwidth-colors "status_line white"
-# set -g @dracula-synchronize-colors "green dark_gray"
-# set -g @dracula-battery-colors "green dark_gray"
-# set -g @dracula-time-colors "orange dark_gray"
-# set -g @dracula-cpu-usage-colors "dark_gray white"
-# set -g @dracula-ram-usage-colors "dark_gray white"
 
 set -g @dracula-colors "
 # Modern Elegant Palette
