--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -88,13 +88,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'kristijan/tmux-fzf-pane-switch'
 
-# Key bindings for pane and window management
-unbind-key %
-bind-key % split-window -h -c '#{pane_current_path}'
-unbind-key '"'
-bind-key '"' split-window -v -c '#{pane_current_path}'
-unbind-key c
-bind-key c new-window -c '#{pane_current_path}'
+# (Duplicate keybindings removed - already defined above)
 
 # Vim-like key bindings for pane navigation
 unbind-key h
@@ -122,12 +116,13 @@ bind-key p select-layout -o  # Quick way to get back to the previous-used layout
 bind-key -r '<' swap-window -d -t '{previous}'  # Move window left
 bind-key -r '>' swap-window -d -t '{next}'  # Move window right
 
-#Variables
-
+# ===================================================================
+# Key Table Variables (for F12 toggle functionality)
+# ===================================================================
 color_status_text="colour245"
 color_window_off_status_bg="colour238"
-color_light="white" #colour015
-color_dark="colour232" # black= colour232
+color_light="white"
+color_dark="colour232"
 color_window_off_status_current_bg="colour254"
 wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
 
@@ -263,10 +258,5 @@ bind R source-file ~/.tmux.conf \; display "Reloaded .tmux.conf file"
 run '~/.tmux/plugins/tpm/tpm'
 
 # Alternative icons if you prefer:
-# CPU: 󰘚 or  or
-# RAM:  or  or 󰆼
-# GPU: 󰾲 or  or
-# Weather:  or  or
-# Time:  or  or
-# Power:  or  or
+# CPU: 󰘚   RAM:   GPU: 󰾲   Weather:   Time:   Power: 
 
