claude fixes, not fully tested

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,9 +59,18 @@ set -g allow-passthrough  # Allow passthrough
 
 # Copy mode settings
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'copy'
 bind P paste-buffer
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'copy'
+
+# Platform-specific clipboard integration
+if-shell "uname | grep -q Darwin" {
+    # macOS clipboard integration
+    bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+    bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+} {
+    # Linux clipboard integration
+    bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+    bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+}
 
 # Status and title settings
 set-option -g status-position top
@@ -254,6 +263,10 @@ set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # source this file after changes
 bind R source-file ~/.tmux.conf \; display "Reloaded .tmux.conf file"
+
+# Auto-install TPM and plugins on first run
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 run '~/.tmux/plugins/tpm/tpm'
 
