Added claude hooks, refactored tools, added some pdf processing scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 local
+
+# Ignore specific subdirectories in maintained_global_claude
+maintained_global_claude/.checksums
+maintained_global_claude/ide/
+maintained_global_claude/projects/
+maintained_global_claude/shell-snapshots/
+maintained_global_claude/statsig/
+maintained_global_claude/todos/
+
+# The files we want to keep (CLAUDE.md, settings.json, commands/, hooks/) 
+# will be tracked normally without needing -f
