--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -72,6 +72,13 @@ if-shell "uname | grep -q Darwin" {
     bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 }
 
+
+# Mouse rectangular selection (hold Shift while dragging)
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode S-MouseDrag1Pane send-keys -X begin-selection \; send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi S-MouseDrag1Pane send-keys -X begin-selection \; send-keys -X rectangle-toggle
+
+
 # Status and title settings
 set-option -g status-position top
 set-option -g status-keys vi
@@ -271,5 +278,5 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 run '~/.tmux/plugins/tpm/tpm'
 
 # Alternative icons if you prefer:
-# CPU: 󰘚   RAM:   GPU: 󰾲   Weather:   Time:   Power: 
+# CPU: 󰘚   RAM:   GPU: 󰾲   Weather:   Time:   Power:
 
