--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,6 +54,7 @@ bind -T popup M-S detach
 bind -T popup C-o copy-mode  # Support detaching from nested session
 
 # Mouse and clipboard settings
+set-option -g set-clipboard on
 set -g mouse on  # Enable mouse mode
 set -g allow-passthrough  # Allow passthrough
 
