--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -104,6 +104,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'kristijan/tmux-fzf-pane-switch'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # (Duplicate keybindings removed - already defined above)
 
