added listener scripts, only tested on macos

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -174,17 +174,17 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
+        set -g @dracula-plugins "pm2-status cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
     } {
         # Fallback for remote systems without GPU
-        set -g @dracula-plugins "cpu-usage ram-usage ssh-session network-bandwidth network"
+        set -g @dracula-plugins "pm2-status cpu-usage ram-usage ssh-session network-bandwidth network"
     }
 
     set -g @dracula-show-left-icon "󰄛"
 } {
     # Local configuration (MacBook)
     set -g @plugin 'dracula/tmux'
-    set -g @dracula-plugins "cpu-usage ram-usage time network-bandwidth network battery"
+    set -g @dracula-plugins "pm2-status cpu-usage ram-usage time network-bandwidth network battery"
     set -g @dracula-show-left-icon "\uf179"
 }
 
@@ -218,6 +218,9 @@ soft_orange='#FFB26B'
 forest_green='#2E8B57'
 warm_gold='#FFD580'
 dark_gray='#22223B'
+soft_pink='#D77FA1'
+light_pink='#FFE5F0'
+light_green='#C8F7DC'
 white='#FFFFFF'
 "
 
@@ -225,6 +228,7 @@ set -g @dracula-cpu-usage-colors "soft_blue white"
 set -g @dracula-ram-usage-colors "muted_teal white"
 set -g @dracula-gpu-usage-colors "deep_purple white"
 set -g @dracula-gpu-ram-usage-colors "slate white"
+set -g @dracula-pm2-status-colors "white dark_gray"
 set -g @dracula-network-colors "charcoal light_blue"
 set -g @dracula-network-bandwidth-colors "light_gray dark_blue"
 set -g @dracula-ssh-session-colors "olive white"
@@ -243,6 +247,7 @@ set -g @dracula-network-bandwidth-label "🌐"
 set -g @dracula-battery-label "🔋"
 set -g @dracula-cpu-usage-label "🎛 "
 set -g @dracula-ram-usage-label "𖣘 "
+set -g @dracula-pm2-status-label "🛠️"
 set -g @dracula-gpu-power-label "󰢮"
 set -g @dracula-gpu-usage-label "🚀"
 set -g @dracula-gpu-vram-label "🎮"
