--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,9 +37,9 @@ bind-key -n F11 if-shell -F '#{==:#{session_name},agents}' {
     detach-client
 } {
     if-shell -F '#{session_exists:agents}' {
-        attach-session -t agents
+        display-popup -E -h 99% -w 95% -x C -y S "tmux attach-session -t agents"
     } {
-        display-popup -E -h 95% -w 95% -x C -y 45% "tmux new-session -A -s agents"
+        display-popup -E -h 99% -w 95% -x C -y S "tmux new-session -A -s agents"
     }
 }
 
