--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -250,24 +250,52 @@ set -g status-left "#{E:@catppuccin_status_session}"
 # Sapphire: #7dc4e4, Pink: #f5bde6, Blue: #8aadf4
 
 # Powerline separators: U+E0B6 (left round), U+E0B4 (right round)
-# Directory (lavender)
-set -g  status-right "#[fg=#b7bdf8,bg=#24273a]#[fg=#181926,bg=#b7bdf8]  #{b:pane_current_path} #[fg=#b7bdf8,bg=#24273a]"
+# Status pills - different for local vs SSH sessions
+if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
+    # LOCAL machine pills
+    # Directory (lavender)
+    set -g  status-right "#[fg=#b7bdf8,bg=#24273a]#[fg=#181926,bg=#b7bdf8]  #{b:pane_current_path} #[fg=#b7bdf8,bg=#24273a]"
 
-# CPU (peach)
-set -ag status-right "#[fg=#f5a97f,bg=#24273a]#[fg=#181926,bg=#f5a97f] 󰘚 #(~/.config/tmux/scripts/cpu.sh) #[fg=#f5a97f,bg=#24273a]"
+    # CPU (peach)
+    set -ag status-right "#[fg=#f5a97f,bg=#24273a]#[fg=#181926,bg=#f5a97f] 󰘚 #(~/dotfiles/tmux/scripts/cpu_status.sh) #[fg=#f5a97f,bg=#24273a]"
 
-# RAM (teal)
-set -ag status-right "#[fg=#8bd5ca,bg=#24273a]#[fg=#181926,bg=#8bd5ca] 󰍛 #(~/.config/tmux/scripts/ram.sh) #[fg=#8bd5ca,bg=#24273a]"
+    # RAM (teal)
+    set -ag status-right "#[fg=#8bd5ca,bg=#24273a]#[fg=#181926,bg=#8bd5ca] 󰍛 #(~/dotfiles/tmux/scripts/ram_status.sh) #[fg=#8bd5ca,bg=#24273a]"
 
-# Load Average (green)
-set -ag status-right "#[fg=#a6da95,bg=#24273a]#[fg=#181926,bg=#a6da95] 󰾥 #(~/.config/tmux/scripts/load.sh) #[fg=#a6da95,bg=#24273a]"
+    # Load Average (green)
+    set -ag status-right "#[fg=#a6da95,bg=#24273a]#[fg=#181926,bg=#a6da95] 󰾥 #(~/dotfiles/tmux/scripts/load_status.sh) #[fg=#a6da95,bg=#24273a]"
 
-# Network (sapphire)
-set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/.config/tmux/scripts/network.sh) #[fg=#7dc4e4,bg=#24273a]"
+    # Network (sapphire)
+    set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
 
-# Battery (pink)
-set -ag status-right "#[fg=#f5bde6,bg=#24273a]#[fg=#181926,bg=#f5bde6] 󰁹 #(~/.config/tmux/scripts/battery.sh) #[fg=#f5bde6,bg=#24273a]"
+    # Battery (pink)
+    set -ag status-right "#[fg=#f5bde6,bg=#24273a]#[fg=#181926,bg=#f5bde6] 󰁹 #(~/dotfiles/tmux/scripts/battery_status.sh) #[fg=#f5bde6,bg=#24273a]"
 
-# Date/Time (blue)
-set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
+    # Date/Time (blue)
+    set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
 
+
+} {
+    # SSH/REMOTE machine pills
+    # Directory (lavender)
+    set -g  status-right "#[fg=#b7bdf8,bg=#24273a]#[fg=#181926,bg=#b7bdf8]  #{b:pane_current_path} #[fg=#b7bdf8,bg=#24273a]"
+
+    # CPU (peach)
+    set -ag status-right "#[fg=#f5a97f,bg=#24273a]#[fg=#181926,bg=#f5a97f] 󰘚 #(~/dotfiles/tmux/scripts/cpu_status.sh) #[fg=#f5a97f,bg=#24273a]"
+
+    # RAM (teal)
+    set -ag status-right "#[fg=#8bd5ca,bg=#24273a]#[fg=#181926,bg=#8bd5ca] 󰍛 #(~/dotfiles/tmux/scripts/ram_status.sh) #[fg=#8bd5ca,bg=#24273a]"
+
+    # Load Average (green)
+    set -ag status-right "#[fg=#a6da95,bg=#24273a]#[fg=#181926,bg=#a6da95] 󰾥 #(~/dotfiles/tmux/scripts/load_status.sh) #[fg=#a6da95,bg=#24273a]"
+
+    # Network (sapphire)
+    set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
+
+    # Battery (pink)
+    set -ag status-right "#[fg=#f5bde6,bg=#24273a]#[fg=#181926,bg=#f5bde6] 󰁹 #(~/dotfiles/tmux/scripts/battery_status.sh) #[fg=#f5bde6,bg=#24273a]"
+
+    # Date/Time (blue)
+    set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
+
+}
