improved ssh pills

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,6 @@
 # Tmux for mere mortals: https://zserge.com/posts/tmux/
 # gitmux: https://github.com/arl/gitmux
 
-
-
 # Create new panes and windows with current path
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -262,6 +260,9 @@ if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
     # RAM (teal)
     set -ag status-right "#[fg=#8bd5ca,bg=#24273a]#[fg=#181926,bg=#8bd5ca] 󰍛 #(~/dotfiles/tmux/scripts/ram_status.sh) #[fg=#8bd5ca,bg=#24273a]"
 
+    # GPU (yellow)
+    set -ag status-right "#[fg=#eed49f,bg=#24273a]#[fg=#181926,bg=#eed49f] 󰢮 #(~/dotfiles/tmux/scripts/gpu_status.sh) #[fg=#eed49f,bg=#24273a]"
+
     # Load Average (green)
     set -ag status-right "#[fg=#a6da95,bg=#24273a]#[fg=#181926,bg=#a6da95] 󰾥 #(~/dotfiles/tmux/scripts/load_status.sh) #[fg=#a6da95,bg=#24273a]"
 
@@ -286,16 +287,13 @@ if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
     # RAM (teal)
     set -ag status-right "#[fg=#8bd5ca,bg=#24273a]#[fg=#181926,bg=#8bd5ca] 󰍛 #(~/dotfiles/tmux/scripts/ram_status.sh) #[fg=#8bd5ca,bg=#24273a]"
 
+    # GPU (yellow)
+    set -ag status-right "#[fg=#eed49f,bg=#24273a]#[fg=#181926,bg=#eed49f] 󰢮 #(~/dotfiles/tmux/scripts/gpu_status.sh) #[fg=#eed49f,bg=#24273a]"
+
     # Load Average (green)
     set -ag status-right "#[fg=#a6da95,bg=#24273a]#[fg=#181926,bg=#a6da95] 󰾥 #(~/dotfiles/tmux/scripts/load_status.sh) #[fg=#a6da95,bg=#24273a]"
 
-    # Network (sapphire)
-    set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
-
-    # Battery (pink)
-    set -ag status-right "#[fg=#f5bde6,bg=#24273a]#[fg=#181926,bg=#f5bde6] 󰁹 #(~/dotfiles/tmux/scripts/battery_status.sh) #[fg=#f5bde6,bg=#24273a]"
-
-    # Date/Time (blue)
-    set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
+    # # Network (sapphire)
+    # set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
 
 }
