--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -268,9 +268,8 @@ if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
     # Network (sapphire)
     set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
 
-    # Battery (pink)
-    set -ag status-right "#[fg=#f5bde6,bg=#24273a]#[fg=#181926,bg=#f5bde6] 󰁹 #(~/dotfiles/tmux/scripts/battery_status.sh) #[fg=#f5bde6,bg=#24273a]"
-
+    # Battery (dynamic color/icon based on charge level)
+    set -ag status-right "#(~/dotfiles/tmux/scripts/battery_status.sh)"
     # Date/Time (blue)
     set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
 
@@ -292,9 +291,8 @@ if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
     # Network (sapphire)
     set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
 
-    # Battery (pink)
-    set -ag status-right "#[fg=#f5bde6,bg=#24273a]#[fg=#181926,bg=#f5bde6] 󰁹 #(~/dotfiles/tmux/scripts/battery_status.sh) #[fg=#f5bde6,bg=#24273a]"
-
+    # Battery (dynamic color/icon based on charge level)
+    set -ag status-right "#(~/dotfiles/tmux/scripts/battery_status.sh)"
     # Date/Time (blue)
     set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
 
