--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,8 +12,10 @@ bind-key -n "M-'" split-window -h -c "#{pane_current_path}"
 bind-key -n M-/ split-window -v -c "#{pane_current_path}"
 bind-key -n M-n new-window -c "#{pane_current_path}"
 bind-key -n M-N new-session -c "#{pane_current_path}"
-bind-key -n '<' swap-pane -U
-bind-key -n '>' swap-pane -D
+# bind-key -n '<' swap-pane -U
+# bind-key -n '>' swap-pane -D
+# bind-key '<' swap-pane -U
+# bind-key '>' swap-pane -D
 
 # Sidepanel toggle (VSCode-style)
 set -g @sidepanel-pane-id ""  # Store the sidepanel pane ID in a user option
@@ -122,14 +124,27 @@ set -g @plugin 'kristijan/tmux-fzf-pane-switch'
 # (Duplicate keybindings removed - already defined above)
 
 # Vim-like key bindings for pane navigation
-unbind-key h
-bind-key h select-pane -L
-unbind-key j
-bind-key j select-pane -D
-unbind-key k
-bind-key k select-pane -U
+# unbind-key h
+# bind-key h select-pane -L
+# unbind-key j
+# bind-key j select-pane -D
+# unbind-key k
+# bind-key k select-pane -U
+# unbind-key l
+# bind-key l select-pane -R
+
 unbind-key l
-bind-key l select-pane -R
+unbind-key h
+# Rotate/reorder windows with prefix + h/l
+# bind-key h swap-window -d -t '{previous}'  # move current window left
+# bind-key l swap-window -d -t '{next}'      # move current window right
+
+# prefix + h/l: swap current window with previous/next by number
+bind-key -T prefix h swap-pane -U
+bind-key -T prefix l swap-pane -D
+
+bind-key -T prefix H rotate-window -D
+bind-key -T prefix L rotate-window -U
 
 # Resizing panes
 unbind-key Left
@@ -144,8 +159,14 @@ bind-key -r Up resize-pane -U 5
 # Window management
 bind-key ^space last-window  # Fast toggle between current and last-used window
 bind-key p select-layout -o  # Quick way to get back to the previous-used layout
-bind-key -r '<' swap-window -d -t '{previous}'  # Move window left
-bind-key -r '>' swap-window -d -t '{next}'  # Move window right
+# unbind-key -n '<'
+# unbind-key -n '>'
+# bind-key -T prefix '<' swap-window -d -t '{previous}'  # Move window left
+# bind-key -T prefix '>' swap-window -d -t '{next}'      # Move window right
+bind-key '<' swap-window -d -t '{previous}'  # Move window left
+bind-key '>' swap-window -d -t '{next}'  # Move window right
+# bind-key -r '<' swap-window -d -t '{previous}'  # Move window left
+# bind-key -r '>' swap-window -d -t '{next}'  # Move window right
 
 # ===================================================================
 # Key Table Variables (for F12 toggle functionality)
