--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -284,8 +284,8 @@ if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
     # Load Average (green)
     set -ag status-right "#[fg=#a6da95,bg=#24273a]#[fg=#181926,bg=#a6da95] 󰾥 #(~/dotfiles/tmux/scripts/load_status.sh) #[fg=#a6da95,bg=#24273a]"
 
-    # Network (sapphire)
-    set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
+    # # Network (sapphire)
+    # set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
 
     # Battery (dynamic color/icon based on charge level)
     set -ag status-right "#(~/dotfiles/tmux/scripts/battery_status.sh)"
@@ -307,8 +307,8 @@ if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
     # Load Average (green)
     set -ag status-right "#[fg=#a6da95,bg=#24273a]#[fg=#181926,bg=#a6da95] 󰾥 #(~/dotfiles/tmux/scripts/load_status.sh) #[fg=#a6da95,bg=#24273a]"
 
-    # Network (sapphire)
-    set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
+    # # Network (sapphire)
+    # set -ag status-right "#[fg=#7dc4e4,bg=#24273a]#[fg=#181926,bg=#7dc4e4] 󰖩 #(~/dotfiles/tmux/scripts/network_status.sh) #[fg=#7dc4e4,bg=#24273a]"
 
     # Battery (dynamic color/icon based on charge level)
     set -ag status-right "#(~/dotfiles/tmux/scripts/battery_status.sh)"
