--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -312,8 +312,8 @@ if-shell '[ -z "$SSH_CLIENT" ] && [ -z "$SSH_TTY" ]' {
 
     # Battery (dynamic color/icon based on charge level)
     set -ag status-right "#(~/dotfiles/tmux/scripts/battery_status.sh)"
-    # Date/Time (blue)
-    set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
+    # # Date/Time (blue)
+    # set -ag status-right "#[fg=#8aadf4,bg=#24273a]#[fg=#181926,bg=#8aadf4] 󰃰 %I:%M %p #[fg=#8aadf4,bg=#24273a]"
 
 }
 
