--- a/codex/config.toml
+++ b/codex/config.toml
@@ -1,4 +1,5 @@
-model = "gpt-5-codex"
+model = "gpt-5.3-codex"
+personality = "pragmatic"
 [projects."/Users/vmasrani/dev/concordance"]
 trust_level = "trusted"
 
@@ -11,6 +12,12 @@ trust_level = "trusted"
 [projects."/Users/vmasrani/dev/projects/animagic/webtools/reflex-app"]
 trust_level = "trusted"
 
+[projects."/Users/vmasrani/dev/workpace"]
+trust_level = "trusted"
+
 [mcp_servers.context7]
 args = ["-y", "@upstash/context7-mcp", "--api-key", "ctx7sk-e92132e7-a04e-437a-9867-ddeca394f98c"]
 command = "npx"
+
+[notice.model_migrations]
+gpt-5-codex = "gpt-5.3-codex"
