tweaks and improvements

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -72,7 +72,10 @@ bind -T popup C-o copy-mode  # Support detaching from nested session
 # Mouse and clipboard settings
 set-option -g set-clipboard on
 set -g mouse on  # Enable mouse mode
-set -g allow-passthrough  # Allow passthrough
+set -g allow-passthrough on  # Allow passthrough (needed for iTerm2 shell integration in tmux)
+
+# Copy last command output to clipboard (prefix + Y)
+bind Y run-shell "$HOME/tools/copy-last-output"
 
 # Copy mode settings
 bind -T copy-mode-vi v send -X begin-selection
